fixed alignment of customize form and 3-card reading on mobile view"

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,4 +1,4 @@
-main.home {
+main {
   display: flex;
   height: 100%;
   flex-direction: column;
@@ -12,9 +12,12 @@ div.home {
 div.table {
   width: 100%;
   max-width: 960px;
-  height: 500px;
-  margin: 100px auto 0 auto;
+  margin: auto;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+div.position {
   justify-content: space-around;
 }
